--- a/Assignment - minMaxAvg/index.html
+++ b/Assignment - minMaxAvg/index.html
@@ -1,33 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment for minMaxAvg</title>
+  <title>minMaxAvg</title>
 </head>
 <body>
-    <h1>Assignment for minMaxAvg</h1>
+	
+<form>
+  Number 1: <input type="text" name="num1"> <br>
+  Number 2: <input type="text" name="num2"> <br>
+  Number 3: <input type="text" name="num3"> <br>
+	
+  Maximum: <output id="max"></output>	<br> 
+  Average: <output id="avg"></output>	<br> 
+  Minimum: <output id="min"></output>	<br> 
+  <br><br>
+</form>		
+<button type="button" id="calc">Calculate</button>
 
-    <label for="numMin">The minimum number:</label>
-    <input type="text" id="numMin">
+<script>
+ 
+  var num1 = document.querySelector("[name='num1']");
+  var num2 = document.querySelector("[name='num2']");
+  var num3 = document.querySelector("[name='num3']"); 
 
-    <label for="numMax">The maximum number:</label>
-    <input type="text" id="numMax">
+  var max = document.getElementById("max");
+  var avg = document.getElementById("avg");
+  var min = document.getElementById("min"); 
+  
+  var btn = document.getElementById("calc");
+  
 
-    <label for="numAvg">The average number:</label>
-    <input type="text" id="numAvg">
+  btn.addEventListener("click", function(){
+    maximum();
+    average();
+    minimum();
+  });
 
-    
-
-    <script>
-        function getNum (min , max , avg) {
-  this.min = min
-  this.max = max
-  this.avg = avg
-}
-    </script>
-
-    <script src="js/minMaxAvg.js"></script>
+  function maximum() {
+    max.textContent = Math.max(num1.value, num2.value, num3.value);  
+  }
+		
+  function average() {
+    avg.textContent = (+num1.value + +num1.value + +num3.value) / 3
+  }
+	
+  function minimum() {
+    min.textContent = Math.min(num1.value, num2.value, num3.value);  
+  }
+</script>
 </body>
 </html>
